# perfpipe

./: README.md  pyproject.toml
src/: command.py  foo  forecast  test.py
src/stats/: asyncPipe.py  clock.py  cpuprocs.py  mpstats.py  statsPipe.py  vnstats.py  weather.py
src/utils/: asyncUtils.py  base16Colors.py  formatting.py  linkUtils.py  logger.py  pipeUtils.py  sparkUtils.py
