[build-system]
requires = ['setuptools', 'wheel', 'setuptools-git-versioning']
build-backend = 'setuptools.build_meta'

[project]
name = 'perfpipe'
description = 'Performance Monitor Pipes'
readme = 'README.md'
license = {text = 'BSD 3-Clause License'}
dependencies = [
    'requests',
    'importlib-metadata; python_version > "3.10"',
]
dynamic  = ['version']


[project.scripts]
 perfpipe = 'command:setup'

[tool.setuptools-git-versioning]
enabled = true
